--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,7 +3,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-label>Dailies</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
@@ -13,8 +13,15 @@
 
     <ion-tab-button tab="tab3">
       <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-label>Calendar</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="settings">
+      <ion-icon name="send"></ion-icon>
+      <ion-label>Settings</ion-label>
+    </ion-tab-button>
+
+    
   </ion-tab-bar>
 
 </ion-tabs>
