--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -1,9 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>settings</ion-title>
+    <ion-title>Settings</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
 </ion-content>
