--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,8 +11,13 @@
       <ion-label>Goals</ion-label>
     </ion-tab-button>
 
+    <ion-tab-button tab="add">
+      <ion-icon name="add"></ion-icon>
+      <ion-label>Add</ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
+      <ion-icon name="calendar"></ion-icon>
       <ion-label>Calendar</ion-label>
     </ion-tab-button>
 
