--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -4,5 +4,59 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-item-divider></ion-item-divider>
+
+<ion-item-divider>
+    <ion-label>Profile</ion-label>
+</ion-item-divider>
+<ion-list>
+  <ion-item>
+    <ion-label>Stat</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Achievement</ion-label>
+  </ion-item>
+
+  <ion-item-divider></ion-item-divider>
+  
+  <ion-item-divider>
+      <ion-label>Inventory</ion-label>
+  </ion-item-divider>
+
+  <ion-item>
+    <ion-label>Shops</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Customize Avatar</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Equipment</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Items</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Subscription</ion-label>
+  </ion-item>
+
+
+  <ion-item-divider></ion-item-divider>
+
+  <ion-item-divider>
+      <ion-label>About</ion-label>
+  </ion-item-divider>
+  <ion-item>
+    <ion-label>News</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Help & FAQ</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>About</ion-label>
+  </ion-item>
+</ion-list>
+
+
 <ion-content>
+
 </ion-content>
